--- a/AngularJsMVC/Views/Home/Category.cshtml
+++ b/AngularJsMVC/Views/Home/Category.cshtml
@@ -24,11 +24,11 @@
                     <b>Name</b>
                 </td>
             </tr>
-            <tr ng-repeat="cat in getcategory">
+            <tr ng-repeat="cat in categories">
                 <td>
                     {{cat.Name}}
                 </td>
-                </tr>
+            </tr>
         </table>
     </div>
 
