Fixed categories incorrect status check

--- a/AngularJsMVC/Views/Home/Category.cshtml
+++ b/AngularJsMVC/Views/Home/Category.cshtml
@@ -26,7 +26,7 @@
             </tr>
             <tr ng-repeat="cat in categories">
                 <td>
-                    {{cat.Name}}
+                    {{cat.name}}
                 </td>
             </tr>
         </table>
